crates/alder-can/src/snapshots/alder_can__module__tests__private_union_not_importable.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe)\n\nx = 1\n"
---
[
    ImportExposingNotFound {
        region: Region {
            start: Position {
                line: 3,
                column: 24,
            },
            end: Position {
                line: 3,
                column: 29,
            },
        },
        module: ModuleName {
            package: None,
            name: "Maybe",
        },
        name: "Maybe",
        available: [],
    },
]
