crates/alder-can/src/snapshots/alder_can__module__tests__recursive_alias_cycle.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias A = B\n\ntype alias B = A\n"
---
[
    RecursiveAlias {
        region: Region {
            start: Position {
                line: 3,
                column: 12,
            },
            end: Position {
                line: 3,
                column: 13,
            },
        },
        name: "A",
        args: [],
        typ: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 16,
                },
                end: Position {
                    line: 3,
                    column: 17,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 16,
                    },
                    end: Position {
                        line: 3,
                        column: 17,
                    },
                },
                name: "B",
                args: [],
            },
        },
        others: [
            "B",
        ],
    },
]
